# smiles

./: .gitignore  404.html  GEMINI.md  README.md  analysingValidator.ipynb  chem.py  download_csvs.sh  grammar copy.txt  grammar.txt  index.html  lex.py  mkdocs.yml  objects.inv  original_grammar.out  parser.out  pyproject.toml  requirements.txt  test.py  testingValidator.ipynb  yacc.py
.github/workflows/: deploy.yml
analyses/: analysingValidator.ipynb  testingValidator.ipynb
analyses/.ipynb_checkpoints/: testingValidator-checkpoint.ipynb
docs/: index.md
docs/reference/: chem.md  validator.md
reference/chem/: index.html
reference/validator/: index.html
search/: search_index.json
src/: __init__.py  chem.py  lex.py  yacc.py
src/chem/: __init__.py  chem.py
src/smiles_checker/: __init__.py  exceptions.py
src/smiles_checker/chem/: __init__.py  atomic.py  chemistry.py  structure.py
src/smiles_checker/validator/: __init__.py  lex.py  parser_manager.py  yacc.py
src/validator/: lex.py  parser_manager.py  yacc.py
tests/chem/: test_chem_module.py  test_electrons.py
tests/smiles_checker/chem/: test_chemistry.py  test_electrons.py  test_structure.py
tests/smiles_checker/validator/: test_molecules_from_values.csv  test_parser.py  test_parser_values.py
tests/validator/: test_parser.py  test_parser_manager_module.py  test_parser_values.py
