[project]
name = "slyparser"
version = "0.1.0"
description = "A LALR(1) parser using SLY"
dependencies = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.12",
  "mkdocstrings[python]>=0.29.1",
  "notebook>=7.4.1",
  "pandas>=2.2.3",
  "pymdown-extensions>=10.15",
  "sly",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra -q"
testpaths = ["tests"]
